<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@drawable/shape_titlebar_bg_color"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="80dp"
            android:text="@string/code"
            android:textSize="14sp"
            android:textColor="@color/title_text_color"
            android:layout_marginLeft="15dp"/>
        <EditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_code"
            android:textSize="14sp"
            android:textColor="@color/text_color"
            android:layout_marginRight="15dp"
            android:inputType="textMultiLine"
            android:background="@null"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="80dp"
            android:text="@string/name"
            android:textSize="14sp"
            android:textColor="@color/title_text_color"
            android:layout_marginLeft="15dp"/>
        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_name"
            android:textSize="14sp"
            android:textColor="@color/text_color"
            android:layout_marginRight="15dp"
            android:inputType="textMultiLine"
            android:background="@null"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="80dp"
            android:text="@string/value"
            android:textSize="14sp"
            android:textColor="@color/title_text_color"
            android:layout_marginLeft="15dp"/>
        <EditText
            android:id="@+id/et_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/input_value"
            android:textSize="14sp"
            android:textColor="@color/text_color"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="80dp"
            android:text="@string/state"
            android:textSize="14sp"
            android:textColor="@color/title_text_color"
            android:layout_marginLeft="15dp"/>
        <CheckBox
            android:id="@+id/cb_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable"/>
        <CheckBox
            android:id="@+id/cb_freeze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/freeze"
            android:layout_marginLeft="15dp"/>
        <CheckBox
            android:id="@+id/cb_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:layout_marginLeft="15dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line"/>

    <Button
        android:id="@+id/btn_complete"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/complete"
        android:background="@drawable/shape_defult_button_bg"
        android:textColor="@color/white"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="50dp"
        style="?android:attr/borderlessButtonStyle"/>

</LinearLayout>
