<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_info"
            android:textColor="@color/title_text_color"
            android:textSize="15sp"
            android:layout_marginLeft="15dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"/>
        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_drop_bar_close"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="15dp"
            android:paddingLeft="10dp"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:minWidth="80dp"
            android:text="@string/axles_num"
            android:textColor="@color/title_text_color"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_axles_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dp"
            android:background="@null"
            android:hint="@string/input_axles_num"
            android:inputType="number"
            android:textColor="@color/text_color"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/axle_type"
            android:textColor="@color/title_text_color"
            android:textSize="14sp"
            android:layout_marginLeft="15dp"
            android:minWidth="80dp"/>
        <TextView
            android:id="@+id/tv_axle_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="14sp"
            android:textColor="@color/text_color"
            android:layout_weight="1"
            android:hint="@string/select_axle_type"/>
        <ImageView
            android:id="@+id/iv_axle_type"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_arrow"
            android:paddingLeft="10dp"
            android:paddingRight="15dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_weight"
            android:textColor="@color/title_text_color"
            android:textSize="14sp"
            android:layout_marginLeft="15dp"
            android:minWidth="80dp"/>
        <EditText
            android:id="@+id/et_total_weight"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@null"
            android:textSize="14sp"
            android:textColor="@color/text_color"
            android:layout_marginRight="35dp"
            android:inputType="numberDecimal"
            android:hint="@string/input_total_weight"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_limit_weight"
            android:textColor="@color/title_text_color"
            android:textSize="14sp"
            android:layout_marginLeft="15dp"
            android:minWidth="80dp"/>
        <TextView
            android:id="@+id/tv_limit_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="14sp"
            android:textColor="@color/text_color"
            android:layout_marginRight="35dp"
            android:hint="@string/select_axle_type"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_over_weight"
            android:textColor="@color/title_text_color"
            android:textSize="14sp"
            android:layout_marginLeft="15dp"
            android:minWidth="80dp"/>
        <EditText
            android:id="@+id/et_over_weight"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@null"
            android:textSize="14sp"
            android:textColor="@color/text_color"
            android:layout_marginRight="35dp"
            android:inputType="numberDecimal"
            android:hint="@string/input_total_over_weight"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goods_class"
            android:textColor="@color/title_text_color"
            android:textSize="14sp"
            android:layout_marginLeft="15dp"
            android:minWidth="80dp"/>
        <EditText
            android:id="@+id/et_goods_class"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:background="@null"
            android:textSize="14sp"
            android:textColor="@color/text_color"
            android:layout_weight="1"
            android:inputType="text"
            android:hint="@string/input_goods_class"/>
        <ImageView
            android:id="@+id/iv_goods_class"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_arrow"
            android:paddingLeft="10dp"
            android:paddingRight="15dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/license_plate"
            android:textColor="@color/title_text_color"
            android:textSize="14sp"
            android:layout_marginLeft="15dp"
            android:minWidth="80dp"/>
        <EditText
            android:id="@+id/et_license_plate"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@null"
            android:textSize="14sp"
            android:textColor="@color/text_color"
            android:layout_marginRight="35dp"
            android:inputType="text"
            android:hint="@string/input_license_plate"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver"
            android:textColor="@color/title_text_color"
            android:textSize="14sp"
            android:layout_marginLeft="15dp"
            android:minWidth="80dp"/>
        <EditText
            android:id="@+id/et_driver"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@null"
            android:textSize="14sp"
            android:textColor="@color/text_color"
            android:layout_marginRight="35dp"
            android:inputType="text"
            android:hint="@string/input_driver"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">
        <Button
            android:id="@+id/btn_clear"
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:text="@string/clear"
            android:background="@drawable/shape_check_data_button_05"
            android:textColor="@color/white"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <Button
            android:id="@+id/btn_initial_survey"
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:text="@string/initial_survey"
            android:layout_centerInParent="true"
            android:background="@drawable/shape_defult_button_bg"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/btn_pass"
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:text="@string/pass"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_check_data_button_04"
            android:textColor="@color/white"/>
    </RelativeLayout>

</LinearLayout>