<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/license_plate"
            android:textColor="@color/title_text_color"
            android:textSize="14sp"
            android:layout_marginLeft="15dp"
            android:minWidth="80dp"/>
        <EditText
            android:id="@+id/et_carNO"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:background="@null"
            android:textSize="14sp"
            android:textColor="@color/text_color"
            android:layout_weight="1"
            android:hint="@string/input_license_plate"/>
        <ImageView
            android:id="@+id/iv_carNo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_arrow"
            android:paddingLeft="10dp"
            android:paddingRight="15dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/begin_time"
            android:textColor="@color/title_text_color"
            android:textSize="14sp"
            android:layout_marginLeft="15dp"
            android:minWidth="80dp"/>
        <TextView
            android:id="@+id/tv_begin_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="14sp"
            android:textColor="@color/text_color"
            android:layout_weight="1"
            android:hint="@string/select_begin_time"/>
        <ImageView
            android:id="@+id/iv_begin_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_arrow"
            android:paddingLeft="10dp"
            android:paddingRight="15dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:textColor="@color/title_text_color"
            android:textSize="14sp"
            android:layout_marginLeft="15dp"
            android:minWidth="80dp"/>
        <TextView
            android:id="@+id/tv_end_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="14sp"
            android:textColor="@color/text_color"
            android:layout_weight="1"
            android:hint="@string/select_end_time"/>
        <ImageView
            android:id="@+id/iv_end_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_arrow"
            android:paddingLeft="10dp"
            android:paddingRight="15dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isrecheck"
            android:textColor="@color/title_text_color"
            android:textSize="14sp"
            android:layout_marginLeft="15dp"
            android:minWidth="80dp"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="是"/>
            <RadioButton
                android:id="@+id/rb_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="否"
                android:layout_marginLeft="15dp"/>
        </RadioGroup>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">
        <Button
            android:id="@+id/btn_clear"
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:text="@string/clear"
            android:background="@drawable/shape_defult_button_bg"
            android:textColor="@color/white"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <Button
            android:id="@+id/btn_cancle"
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:text="@string/cancle"
            android:background="@drawable/shape_defult_button_bg"
            android:textColor="@color/white"
            android:layout_centerInParent="true"/>
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:text="@string/ok"
            android:background="@drawable/shape_defult_button_bg"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

</LinearLayout>