<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@drawable/shape_titlebar_bg_color"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_info"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="110dp"
                    android:text="@string/car_type"
                    android:textSize="14sp"
                    android:textColor="@color/title_text_color"
                    android:layout_marginLeft="15dp"/>
                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/input_name"
                    android:textSize="14sp"
                    android:textColor="@color/text_color"
                    android:background="@null"
                    android:layout_marginRight="15dp"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="110dp"
                    android:text="@string/axles_num"
                    android:textSize="14sp"
                    android:textColor="@color/title_text_color"
                    android:layout_marginLeft="15dp"/>
                <EditText
                    android:id="@+id/et_axles_num"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/input_content"
                    android:textSize="14sp"
                    android:textColor="@color/text_color"
                    android:background="@null"
                    android:layout_marginRight="15dp"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line"/>

            <Button
                android:id="@+id/btn_complete"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/complete"
                android:background="@drawable/shape_defult_button_bg"
                android:textColor="@color/white"
                android:layout_margin="25dp"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
